<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >        
        <RadioGroup android:id="@+id/options"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip" >
            <RadioButton android:id="@+id/locale_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/locale_en" />
            <RadioButton android:id="@+id/locale_zh_rCN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locale_zh_cn" />
            <RadioButton android:id="@+id/locale_zh_rTW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locale_zh_tw" />
        </RadioGroup>
    </ScrollView>
</LinearLayout>